fix: improve logo legibility

--- a/project/source/page/css/style.css
+++ b/project/source/page/css/style.css
@@ -118,6 +118,11 @@ button {
   text-align: right;
 }
 
+.logo-image {
+  margin-right: 0.1em;
+  vertical-align: middle;
+}
+
 .logo-text {
   font-size: 2.5em;
   font-family: 'Fuggles', cursive;
@@ -446,7 +451,7 @@ input.wishlist-link, input#search {
 }
 
 .spaced {
-  margin: 0 0.1em;
+  margin: 0 0.05em;
 }
 
 .reading-pane {
